--- a/src/components/Popover/menu.module.less
+++ b/src/components/Popover/menu.module.less
@@ -18,7 +18,7 @@
   }
 
   &-items {
-    min-width: 220px;
+    width: 220px;
   }
 
   &-item {
@@ -57,6 +57,7 @@
       &-icon {
         display: flex;
         width: 20px;
+        margin-left: 8px;
       }
 
       &-loading {
