--- a/src/pages/Search/index.module.less
+++ b/src/pages/Search/index.module.less
@@ -6,71 +6,22 @@
   flex-direction: column;
   align-items: center;
 
-  &-post-list {
-    width: 100%;
-
-    &-hidden {
-      display: none;
-    }
+  @media (max-width: 699px) {
+    padding-right: var(--barcelona-post-horizontal-padding);
+    padding-left: var(--barcelona-post-horizontal-padding);
   }
 
   &-input {
-    width: calc(var(--barcelona-search-page-width) + 34px);
-    background-color: var(--barcelona-primary-background);
-    position: relative;
-    z-index: 1;
-
-    @media (max-width: 699px) {
-      width: 100%;
-    }
-
-    position: relative;
-
-    &-result {
-      position: absolute;
-      width: 100%;
-      top: 100%;
-      left: 0;
-      transform-origin: top;
-      box-shadow: 0 12px 24px 0 rgba(0, 0, 0, 0.08);
-      background-color: var(--barcelona-secondary-background);
-      border-bottom-left-radius: 16px;
-      border-bottom-right-radius: 16px;
-      border-top-right-radius: 0;
-      border-top-left-radius: 0;
-      animation-fill-mode: forwards;
-      animation-duration: 0.2s;
-      animation-name: scale-in;
-      transform: scale(0.93, 0);
-      overflow-x: hidden;
-      max-height: 484px;
-      overflow-y: auto;
-      overscroll-behavior: contain;
-      border: 1px solid var(--barcelona-primary-outline);
-      border-top: none;
-      box-sizing: border-box;
-      background-color: var(--barcelona-secondary-background);
-      z-index: 2;
-    }
-
-    @keyframes scale-in {
-      0% {
-        transform: scale(0.948, 0);
-      }
-
-      100% {
-        transform: scale(1, 1);
-      }
-    }
-  }
-
-  @media (max-width: 699px) {
-    padding-left: 16px;
-    padding-right: 16px;
     margin-top: 6px;
+    width: 100%;
+
+    &-inner {
+      height: 44px;
+      width: 100%;
+    }
   }
 
-  &-result {
-    padding-top: 12px;
+  &-post-list {
+    width: 100%;
   }
 }
