--- a/src/components/Modal/dragModal.module.less
+++ b/src/components/Modal/dragModal.module.less
@@ -12,8 +12,16 @@
   pointer-events: auto;
 
   &-content {
-    width: 100%;
-    height: 100%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    flex-direction: column;
+    display: flex;
+    justify-content: flex-start;
+    display: flex;
+    position: fixed;
+    overflow: hidden;
     pointer-events: none;
   }
 
