feat: 优化搜索模块新增 tab

--- a/src/pages/Search/index.module.less
+++ b/src/pages/Search/index.module.less
@@ -21,7 +21,17 @@
     }
   }
 
-  &-post-list {
+  &-post {
+    margin-top: 12px;
     width: 100%;
+
+    &-list {
+      width: 100%;
+    }
+
+    &-tab {
+      background-color: var(--barcelona-primary-background);
+      z-index: 1;
+    }
   }
 }
