--- a/src/pages/Search/searchResult.module.less
+++ b/src/pages/Search/searchResult.module.less
@@ -14,7 +14,7 @@
     text-decoration: none;
 
     &-icon {
-      padding: 24px;
+      padding: 24px 24px 24px 12px;
       color: var(--barcelona-navigation-icon);
       display: flex;
 
@@ -29,7 +29,7 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-      padding: 16px 16px 16px 0;
+      padding: 16px 0 16px 0;
       height: 32px;
       border-bottom: 0.5px solid var(--barcelona-primary-outline);
 
@@ -54,11 +54,6 @@
 
     &-item {
       padding-top: 4px;
-      padding-left: 16px;
-
-      &-follow {
-        margin-right: 16px;
-      }
     }
   }
 }
