feat: 优化播放器control

--- a/src/components/Mask/index.module.less
+++ b/src/components/Mask/index.module.less
@@ -10,7 +10,7 @@
   overscroll-behavior-y: contain;
   overflow-y: auto;
   box-sizing: border-box;
-  //touch-action: none;
+  touch-action: none;
   scrollbar-width: none;
   .fade-in();
 
