--- a/src/components/VideoPlayer/controls.module.less
+++ b/src/components/VideoPlayer/controls.module.less
@@ -5,6 +5,7 @@
   width: 100%;
   padding: 16px 0;
   cursor: pointer;
+  touch-action: none;
 
   &-near-bottom {
     bottom: 0;
@@ -39,6 +40,7 @@
       transform-origin: left;
       width: 100%;
       border-radius: 100px;
+      touch-action: none;
 
       &-duration {
         transition-duration: 0.2s;
