feat: 优化Search 样式

--- a/src/pages/Search/index.module.less
+++ b/src/pages/Search/index.module.less
@@ -22,7 +22,6 @@
   }
 
   &-post {
-    margin-top: 12px;
     width: 100%;
 
     &-list {
@@ -30,6 +29,7 @@
     }
 
     &-tab {
+      padding-top: 12px;
       background-color: var(--barcelona-primary-background);
       z-index: 1;
     }
