--- a/src/components/SearchInput/index.module.less
+++ b/src/components/SearchInput/index.module.less
@@ -5,7 +5,7 @@
   background-color: var(--barcelona-secondary-background);
   flex-direction: row;
   align-items: center;
-  outline: 1px solid var(--barcelona-primary-outline);
+  border: 1px solid var(--barcelona-primary-outline);
   box-sizing: border-box;
 
   &-icon {
