--- a/src/components/Button/index.module.less
+++ b/src/components/Button/index.module.less
@@ -47,8 +47,7 @@
     text-decoration: none;
   }
 
-  &-disabled-default,
-  &-disabled-gray {
+  &-disabled {
     cursor: not-allowed;
 
     &:active {
@@ -56,12 +55,7 @@
     }
   }
 
-  &-disabled-default {
+  &-disabled {
     color: var(--barcelona-secondary-text);
-  }
-
-  &-disabled-gray {
-    color: var(--barcelona-primary-button-text);
-    opacity: 0.3;
   }
 }
