feat: 优化未登录操作相关跳转

--- a/src/pages/Auth/index.module.less
+++ b/src/pages/Auth/index.module.less
@@ -1,3 +1,5 @@
+@import '@assets/less/variable.less';
+
 .auth {
   min-height: 100vh;
   display: flex;
@@ -20,6 +22,7 @@
 
     &-logo {
       width: 60px;
+      .active-scale();
     }
   }
 }
