--- a/src/pages/components/PostActivityModal/activities.module.less
+++ b/src/pages/components/PostActivityModal/activities.module.less
@@ -28,7 +28,7 @@
       justify-content: space-between;
       align-items: center;
 
-      &-text {
+      &-label {
         .text(var(--barcelona-primary-text), var(--system-15-font-size), 1.4, 600);
       }
 
@@ -45,6 +45,8 @@
         &-icon {
           display: flex;
           transform: rotate(180deg);
+          width: 16px;
+          height: 16px;
         }
       }
     }
