--- a/src/components/ScrollCountText/index.module.less
+++ b/src/components/ScrollCountText/index.module.less
@@ -1,4 +1,4 @@
-.scroll-count-text {
+.scroll-text {
   overflow-y: hidden;
   display: inline-grid;
   grid-template-columns: auto auto;
@@ -17,4 +17,9 @@
       transition-timing-function: ease-in;
     }
   }
+}
+
+.scroll-count-text {
+  display: inline-flex;
+  user-select: none;
 }
