--- a/src/components/ScrollCountText/index.module.less
+++ b/src/components/ScrollCountText/index.module.less
@@ -3,6 +3,7 @@
   display: inline-grid;
   grid-template-columns: auto auto;
   position: relative;
+  line-height: 1.4;
 
   &-inner {
     height: var(--base-line-clamp-line-height);
