--- a/src/components/MutilStepContainer/index.module.less
+++ b/src/components/MutilStepContainer/index.module.less
@@ -6,7 +6,7 @@
   outline: none;
   -webkit-tap-highlight-color: transparent;
 
-  &-slide {
+  &-item {
     transition-property: opacity, transform;
     box-sizing: border-box;
     transition-timing-function: var(--fds-soft);
