--- a/src/pages/components/PostEditModal/accessibilityPanel.module.less
+++ b/src/pages/components/PostEditModal/accessibilityPanel.module.less
@@ -1,6 +1,6 @@
 @import '@assets/less/variable.less';
 
-.accessibility-modal {
+.accessibility-panel {
   width: 620px;
   max-height: calc(100svh - 109px);
   overflow-y: auto;
