--- a/src/components/Modal/scrollInModal.module.less
+++ b/src/components/Modal/scrollInModal.module.less
@@ -1,14 +1,9 @@
 @import '@assets/less/variable.less';
 
-.scroll-in {
+.confirm-panel {
   background-color: var(--barcelona-secondary-background);
-  height: 100dvh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 3;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   padding-bottom: env(safe-area-inset-bottom);
