--- a/src/components/MutilStepContainer/index.module.less
+++ b/src/components/MutilStepContainer/index.module.less
@@ -15,16 +15,15 @@
     transform-origin: inherit;
     pointer-events: none;
     outline: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
 
     &-active {
       opacity: 1;
       pointer-events: auto;
-    }
-
-    &-mounted {
-      position: absolute;
-      top: 0;
-      left: 0;
     }
   }
 }
